--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "16.0.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-fast-marquee": "^1.6.5",
     "swiper": "^12.0.3"
   },
   "devDependencies": {
