--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-fast-marquee": "^1.6.5",
+    "sass": "^1.93.3",
     "swiper": "^12.0.3"
   },
   "devDependencies": {
