--- a/jsconfig.json
+++ b/jsconfig.json
@@ -5,6 +5,7 @@
       "@common/*": ["app/components/common/*"],
       "@functions/*": ["app/components/functions/*"],
       "@home/*": ["app/components/home/*"],
+      "@about/*": ["app/components/aboutUs/*"],
       "@styles/*": ["public/styles/*"],
       "@public/*": ["public/*"],
       "@utils/*": ["utils/*"],
