--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@motionone/dom": "^10.18.0",
+    "lenis": "^1.3.15",
     "next": "16.0.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
