--- a/jsconfig.json
+++ b/jsconfig.json
@@ -9,6 +9,7 @@
       "@styles/*": ["public/styles/*"],
       "@public/*": ["public/*"],
       "@utils/*": ["utils/*"],
+      "@lib/*": ["lib/*"],
       "@components/*": ["app/components/*"],
     }
   }
