--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "react-dom": "19.2.0",
     "react-fast-marquee": "^1.6.5",
     "sass": "^1.93.3",
-    "swiper": "^12.0.3"
+    "swiper": "^12.0.3",
+    "fs": "0.0.1-security",
+    "jose": "5.9.3",
+    "sweetalert2": "11.18.0"
   },
   "devDependencies": {
     "eslint": "^9",
