--- a/package.json
+++ b/package.json
@@ -10,16 +10,17 @@
   },
   "dependencies": {
     "@motionone/dom": "^10.18.0",
+    "aos": "^2.3.4",
+    "fs": "0.0.1-security",
+    "jose": "5.9.3",
     "lenis": "^1.3.15",
     "next": "16.0.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-fast-marquee": "^1.6.5",
     "sass": "^1.93.3",
-    "swiper": "^12.0.3",
-    "fs": "0.0.1-security",
-    "jose": "5.9.3",
-    "sweetalert2": "11.18.0"
+    "sweetalert2": "11.18.0",
+    "swiper": "^12.0.3"
   },
   "devDependencies": {
     "eslint": "^9",
