--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "fs": "0.0.1-security",
     "jose": "5.9.3",
     "lenis": "^1.3.15",
+    "mysql2": "^3.15.3",
     "next": "16.0.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
