--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-fast-marquee": "^1.6.5",
     "sass": "^1.93.3",
     "sweetalert2": "11.18.0",
-    "swiper": "^12.0.3"
+    "swiper": "^12.0.3",
+    "react-data-table-component": "7.5.4"
   },
   "devDependencies": {
     "eslint": "^9",
